<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="patrol">Patrol</string>
    <string name="hello_world">Hello World</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="_return">Return</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="error_of">Error: %s</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="confirm">Confirm</string>
    <string name="_continue">Continue</string>
    <string name="summary">Summary</string>
    <string name="_notice">Notice</string>
    <string name="content">Content</string>
    <string name="project">Project</string>
    <string name="status">Status</string>
    <string name="value">Value</string>
    <string name="normal">Normal</string>
    <string name="abnormal">Abnormal</string>
    <string name="complete">Complete</string>
    <string name="scan">Scan</string>
    <string name="uploading">Uploading</string>
    <string name="please_wait">Please wait...</string>
    <string name="notification">Notification</string>
    <string name="synchronize_data">Synchronize Data</string>
    <string name="start_patrol">Start Patrol</string>
    <string name="stop">Stop</string>
    <string name="comma">, </string>
    <string name="confirm_logout">You will lose call data when logging out. Do you still want to continue?</string>
    <string name="description">Description</string>
    <string name="remove">Remove</string>
    <string name="network_connected">Network connected</string>
    <string name="network_not_connected">Network not connected</string>
    <string name="new_task">New Task</string>
    <string name="not_uploaded">Not uploaded: %d</string>
    <string name="current_task">Current Task</string>
    <string name="no_current_task">No Current Task</string>
    <string name="continue_task">Continue Task</string>
    <string name="complete_task">Complete Task</string>

    <!-- Strings related to settings -->
    <string name="server">Server</string>
    <string name="site_url">Site URL</string>
    <string name="continuous_scan">Continuous Scan Mode</string>
    <string name="continuous_scan_description">Continuously scan barcode instead of returning to assets page</string>
    <string name="error_site_url_missing">Site URL is not set! Please configure it in Settings menu.</string>
    <string name="error_site_url_invalid">Site URL %s is invalid! Please configure it in Settings menu.</string>
    <string name="error_network_connection_failure">Failed to connect to site %s.</string>
    <string name="clear_local_data">Clear Local Data</string>

    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="offline_mode">Use Offline Mode</string>
    <string name="use_offline_mode"> Use Offline Mode?</string>
    <string name="app_version_upgrade">App Version Upgrade</string>
    <string name="app_version_upgrade_message">Record of previous version is detected and saved</string>
    <string name="not_logged_in">You are not logged in yet. Do you want to go to Login page?</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_password_please_login">This password is incorrect, please logout and login again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_network">No network available.</string>
    <string name="error_please_input_site_url">Please input site URL.</string>

    <!-- Strings related to logout -->
    <string name="logout_warning">Logout will save current data and you will be unable to change it</string>
    <string name="quit_app">Quit app</string>
    <string name="confirm_quit_app">are you sure to quit app?</string>

    <!-- Strings related to notification -->
    <string name="back_to_route_list">Back to Routes</string>
    <string name="n_items_selected">%d items selected</string>

    <!-- Strings related to route -->
    <string name="route">Route</string>
    <string name="route_list">Route List</string>
    <string name="confirm_route">Confirm Route</string>
    <string name="selected_route">Selected Route: %s</string>
    <string name="confirm_new_route">Change to new route: %s\nCurrent saved data will be gone!</string>
    <string name="no_update">No Update</string>
    <string name="update_complete">Update is complete</string>
    <string name="no_route">No route is selected!</string>
    <string name="start_synchronizing">Start synchronizing</string>

    <!-- Strings related to asset -->
    <string name="asset">Asset</string>
    <string name="confirm_asset">Confirm Asset</string>
    <string name="selected_asset">Selected Asset: %s</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="barcode">Barcode</string>
    <string name="manual_input">Manual Input</string>
    <string name="error_incorrect_barcode">Incorrect Barcode</string>
    <string name="error_incomplete_assets">There are incomplete assets!</string>
    <string name="whether_save_incomplete_data">Do you want to save incomplete data?</string>
    <string name="complete_patrol">Complete Patrol</string>
    <string name="save_data">Save data</string>
    <string name="data_saved">Data is saved</string>
    <string name="upload_data">Upload all data?</string>
    <string name="error_upload">Failed to upload %s records</string>
    <string name="upload_success">Successfully uploaded %s records</string>
    <string name="manual_input_barcode">Please manually enter barcode</string>
    <string name="not_scanned">Not scanned</string>
    <string name="whether_save_record">Whether to save record?</string>

    <!-- Strings related to point -->
    <string name="asset_list">Return to Asset List</string>
    <string name="check_point">Check Point</string>
    <string name="confirm_point">Confirm Point</string>
    <string name="selected_point">Selected Point: %s</string>
    <string name="enter_value">Please enter value</string>
    <string name="select_value">Please select value</string>
    <string name="normal_range">Normal Range</string>
    <string name="asset_status">Asset Status</string>
    <string name="error_not_a_number">"%s" is not a number</string>
    <string name="memo">Memo</string>
    <string name="add_photo">Add Photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="error_no_data">No data</string>
    <string name="result_in_warning_status">Result in WARNING status</string>
    <string name="result_in_fail_status">Result in FAIL status</string>
    <string name="continue_scan">Continue scanning</string>
    <string name="enter_scan_in_secs">Enter scan page in %s seconds</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="point_code">Point Code</string>
    <string name="upload">Upload</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="no_image_selected">No image selected</string>
    <string name="error_no_camera_support">No camera support</string>
    <string name="error_fail_to_upload_image">Fail to upload photo</string>
    <string name="upload_image_success">Image upload is successful!</string>
    <string name="save_image_success">Image is successfully saved!</string>
    <string name="delete_image_success">Image is successfully deleted!</string>
    <string name="record_voice">Record Voice</string>
    <string name="play">Play</string>
    <string name="no_recording">No Recording</string>
    <string name="delete_recording">Delete Recording</string>
    <string name="delete_recording_success">Recording is successfully deleted!</string>

    <!-- Strings related to graph -->
    <string name="graph_1_pareto________">Pareto</string>
    <string name="graph_2_horizontal_bar">Horizontal Bars</string>
    <string name="graph_3_pie___________">Pie</string>
    <string name="graph_4_exploded_pie__">Exploded Pie</string>
    <string name="graph_5_doughnut______">Doughnut</string>

    <string name="historical_data_graph">Historical Data Graph</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="error_is_after_today">%s is after today</string>
    <string name="error_start_date_after_end_date">Start date should not be later than end date</string>
</resources>
