<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_repeat"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mbrite.patrol.app.AssetsActivity">

    <ExpandableListView
        android:id="@+id/assets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/footer">
    </ExpandableListView>

    <LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/scan_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:orientation="vertical"
            android:clickable="true"
            android:text="@string/scan_barcode"
            android:drawableTop="@drawable/camera"
            android:background="@drawable/background_cyan"
            android:textColor="@color/white"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/input_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:orientation="vertical"
            android:clickable="true"
            android:text="@string/manual_input"
            android:drawableTop="@drawable/lined_paper_pencil"
            android:background="@drawable/background_cyan"
            android:textColor="@color/white"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/save_data_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:orientation="vertical"
            android:clickable="true"
            android:text="@string/save_data"
            android:drawableTop="@drawable/lined_paper_lock"
            android:background="@drawable/background_cyan"
            android:textColor="@color/white"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:orientation="vertical"
            android:clickable="true"
            android:text="@string/complete_patrol"
            android:drawableTop="@drawable/lined_paper_check"
            android:background="@drawable/background_cyan"
            android:textColor="@color/white"
            android:gravity="center">
        </TextView>
    </LinearLayout>

</RelativeLayout>
