<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_repeat"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mbrite.patrol.app.MainActivity">

    <fragment
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:name="com.mbrite.patrol.app.RoutesFragment"
        android:id="@+id/routes"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/footer"/>

    <LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical"
            android:clickable="true"
            android:text="@string/notification"
            android:drawableTop="@drawable/mail"
            android:background="@drawable/background_cyan"
            android:textColor="@color/white"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/refresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical"
            android:clickable="true"
            android:text="@string/synchronize_data"
            android:drawableTop="@drawable/refresh"
            android:background="@drawable/background_cyan"
            android:textColor="@color/white"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical"
            android:clickable="true"
            android:text="@string/start_patrol"
            android:drawableTop="@drawable/circleright"
            android:background="@drawable/background_cyan"
            android:textColor="@color/white"
            android:gravity="center">
        </TextView>
    </LinearLayout>
</RelativeLayout>
